--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Aula2803</string>
+    <string name="title_activity_segunda_tela">SegundaTela</string>
 </resources>
